force-app/main/default/objects/PGi_ServiceCatalog_Category__c/PGi_ServiceCatalog_Category__c.object-meta.xml
<CustomObject>
    <label>Category</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Category</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>