force-app/main/default/objects/PGi_ServiceCatalog_Category__c/fields/Navigate_to__c.field-meta.xml
<CustomField>
    <fullName>Navigate_to__c</fullName>
    <description>If the navigate to is left blank, then the user is shown the category options</description>
    <inlineHelpText>If the navigate to is left blank, then the user is shown the category options</inlineHelpText>
    <label>Navigate to</label>
    <type>Url</type>
</CustomField>