force-app/main/default/objects/PGi_ServiceCatalog_Category__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>