force-app/main/default/objects/PGi_ServiceCatalog_Category__c/fields/Static_Resource_Image__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource_Image__c</fullName>
    <description>Input the name for the static resource to be displayed as an icon for the end user</description>
    <inlineHelpText>Input the name for the static resource to be displayed as an icon for the end user</inlineHelpText>
    <label>Static Resource Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>