force-app/main/default/objects/PGi_ServiceCatalog_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Navigate_to__c</columns>
    <columns>Static_Resource_Image__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>